--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
@@ -3,10 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
+<AnchorPane prefHeight="991.0" prefWidth="1068.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
    <children>
-      <Button layoutX="379.0" layoutY="24.0" mnemonicParsing="false" onAction="#buttonClicked" prefHeight="49.0" prefWidth="185.0" text="Beep" />
-      <TextArea fx:id="output" layoutX="14.0" layoutY="10.0" prefHeight="373.0" prefWidth="351.0" />
+      <Button layoutX="869.0" layoutY="14.0" mnemonicParsing="false" onAction="#buttonClicked" prefHeight="49.0" prefWidth="185.0" text="Beep" />
+      <TextArea fx:id="output" layoutX="14.0" layoutY="10.0" prefHeight="964.0" prefWidth="848.0">
+         <font>
+            <Font name="Courier New" size="13.0" />
+         </font></TextArea>
    </children>
 </AnchorPane>
