--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="991.0" prefWidth="1068.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
+<AnchorPane prefHeight="351.0" prefWidth="622.0" stylesheets="@MainWindow.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
    <children>
-      <Button layoutX="869.0" layoutY="14.0" mnemonicParsing="false" onAction="#buttonClicked" prefHeight="49.0" prefWidth="185.0" text="Beep" />
-      <TextArea fx:id="output" layoutX="14.0" layoutY="10.0" prefHeight="964.0" prefWidth="848.0">
-         <font>
-            <Font name="Courier New" size="13.0" />
-         </font></TextArea>
+      <ComboBox layoutX="72.0" layoutY="20.0" prefHeight="27.0" prefWidth="454.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="89.0" />
+      <Label layoutX="14.0" layoutY="25.0" prefHeight="17.0" prefWidth="58.0" text="Terminal:" AnchorPane.leftAnchor="14.0" />
+      <Button layoutX="537.0" layoutY="20.0" mnemonicParsing="false" text="Refresh" AnchorPane.rightAnchor="16.0" />
+      <VBox id="infoPane" alignment="CENTER" layoutX="14.0" layoutY="62.0" prefHeight="229.0" prefWidth="624.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0">
+         <children>
+            <Label id="infoText" text="Select terminal to start...." />
+         </children>
+      </VBox>
+      <Button layoutX="481.0" layoutY="304.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="125.0" text="Close" AnchorPane.rightAnchor="16.0" />
    </children>
 </AnchorPane>
