--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
@@ -8,14 +8,14 @@
 
 <AnchorPane prefHeight="351.0" prefWidth="622.0" stylesheets="@MainWindow.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
    <children>
-      <ComboBox layoutX="72.0" layoutY="20.0" prefHeight="27.0" prefWidth="454.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="89.0" />
+      <ComboBox fx:id="terminalsList" layoutX="72.0" layoutY="20.0" prefHeight="27.0" prefWidth="454.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="89.0" />
       <Label layoutX="14.0" layoutY="25.0" prefHeight="17.0" prefWidth="58.0" text="Terminal:" AnchorPane.leftAnchor="14.0" />
-      <Button layoutX="537.0" layoutY="20.0" mnemonicParsing="false" text="Refresh" AnchorPane.rightAnchor="16.0" />
+      <Button layoutX="537.0" layoutY="20.0" mnemonicParsing="false" onAction="#refreshTerminalList" text="Refresh" AnchorPane.rightAnchor="16.0" />
       <VBox id="infoPane" alignment="CENTER" layoutX="14.0" layoutY="62.0" prefHeight="229.0" prefWidth="624.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0">
          <children>
-            <Label id="infoText" text="Select terminal to start...." />
+            <Label id="infoText" fx:id="infoScreen" text="Select terminal to start...." />
          </children>
       </VBox>
-      <Button layoutX="481.0" layoutY="304.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="125.0" text="Close" AnchorPane.rightAnchor="16.0" />
+      <Button layoutX="481.0" layoutY="304.0" mnemonicParsing="false" onAction="#closeMainWindow" prefHeight="34.0" prefWidth="125.0" text="Close" AnchorPane.rightAnchor="16.0" />
    </children>
 </AnchorPane>
