--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.css
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.css
@@ -1,8 +1,11 @@
+.root {
+    -fx-control-inner-background-alt: -fx-control-inner-background ;
+}
 
 .table-cell:invalid-table-cell .text-field {
-    -fx-focus-color: red ;
-    -fx-control-inner-background: #ffc0c0 ;
-    -fx-accent: red ;
+    -fx-focus-color: red;
+    -fx-control-inner-background: #ffc0c0;
+    -fx-accent: red;
 }
 
 .table-cell:readonly-table-cell {
@@ -10,5 +13,6 @@
 }
 
 .table-cell {
-    -fx-font-family: monospace ;
+    -fx-font-family: monospace;
+    -fx-font-weight: bold;
 }
