--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
@@ -18,9 +18,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import pl.marcinchwedczuk.rfid.gui.KeyBox?>
 <?import pl.marcinchwedczuk.rfid.gui.MaskedTextField?>
 
-<?import pl.marcinchwedczuk.rfid.gui.KeyBox?>
 <AnchorPane prefHeight="929.0" prefWidth="1265.0" stylesheets="@CardWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.CardWindow">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="54.0" text="Card ID:" />
@@ -48,7 +48,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="dataTable" editable="true" layoutX="334.0" layoutY="14.0" prefHeight="652.0" prefWidth="675.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="334.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+                        <TableView fx:id="dataTable" editable="true" layoutX="334.0" layoutY="14.0" prefHeight="652.0" prefWidth="675.0" styleClass="data-table" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="334.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
 
                         </TableView>
                         <Spinner fx:id="fromSector" layoutX="14.0" layoutY="102.0" prefHeight="27.0" prefWidth="297.0" />
@@ -80,13 +80,13 @@
                               <Pane prefHeight="662.0" prefWidth="77.0" HBox.hgrow="ALWAYS">
                                  <children>
                                     <Label layoutX="27.0" layoutY="285.0" text="Data Block 0:" />
-                                    <ChoiceBox fx:id="secBlock0Perms" layoutX="125.0" layoutY="280.0" prefWidth="150.0" />
+                                    <ChoiceBox fx:id="secBlock0Perms" layoutX="125.0" layoutY="280.0" prefWidth="150.0" styleClass="cbits" />
                                     <Label layoutX="27.0" layoutY="319.0" text="Data Block 1:" />
-                                    <ChoiceBox fx:id="secBlock1Perms" layoutX="125.0" layoutY="314.0" prefWidth="150.0" />
+                                    <ChoiceBox fx:id="secBlock1Perms" layoutX="125.0" layoutY="314.0" prefWidth="150.0" styleClass="cbits" />
                                     <Label layoutX="27.0" layoutY="355.0" text="Data Block 2:" />
-                                    <ChoiceBox fx:id="secBlock2Perms" layoutX="125.0" layoutY="350.0" prefWidth="150.0" />
+                                    <ChoiceBox fx:id="secBlock2Perms" layoutX="125.0" layoutY="350.0" prefWidth="150.0" styleClass="cbits" />
                                     <Label layoutX="27.0" layoutY="399.0" text="Sector Trailer:" />
-                                    <ChoiceBox fx:id="secTrailerPerms" layoutX="125.0" layoutY="395.0" prefWidth="150.0" />
+                                    <ChoiceBox fx:id="secTrailerPerms" layoutX="125.0" layoutY="395.0" prefWidth="150.0" styleClass="cbits" />
                                     <Label layoutX="30.0" layoutY="27.0" text="Sector:" />
                                     <MaskedTextField fx:id="secSector" layoutX="77.0" layoutY="23.0" mask="##" prefHeight="26.0" prefWidth="203.0" promptText="Sector" />
                                     <Button layoutX="30.0" layoutY="62.0" mnemonicParsing="false" onAction="#secReadPermissions" prefHeight="26.0" prefWidth="250.0" text="Read Keys &amp; Permissions" />
